[package]
edition = "2021"
name = "advent_of_code"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.4", features = ["derive"]}
enum-iterator = "1.4.0"
indicatif = "0.17.6"
num-bigint = "0.4.4"
num-traits = "0.2.16"
paste = "1.0.14"
rayon = "1.7.0"
regex = "1.9.4"
