[package]
edition = "2021"
name = "advent_of_code"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.13", features = ["derive"]}
enum-iterator = "1.4.0"
indicatif = "0.17.7"
num-bigint = "0.4.4"
num-traits = "0.2.17"
paste = "1.0.14"
rayon = "1.7.0"
regex = "1.10.2"
