[package]
edition = "2021"
name = "advent_of_code"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
enum-iterator = "2.1.0"
indicatif = "0.17.8"
num-bigint = "0.4.5"
num-traits = "0.2.19"
paste = "1.0.15"
rayon = "1.10.0"
regex = "1.10.4"
